# coding-agent

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  create_github_issues.py  pyproject.toml
docs/: CLI-REFERENCE.md  INSTALLATION.md  SKILL-USAGE.md  implementation-plan-issue-10.md  implementation-plan-issue-13.md  implementation-plan-issue-14.md  implementation_plan_tool_capability_enhancement.md  proposal-issue-10-tool-output-improvements.md  proposal-issue-13-workflow-checkpoint-and-resume.md  proposal-issue-14-interactive-workflow-progress.md
docs/agent/: PATCH-VS-WRITE.md  TOOLS.md
docs/dev/: REFACTOR-SUBPACKAGES.md  TUI-RENDERING.md
docs/user/: CLI-REFERENCE.md  SKILL-USAGE.md  WORKFLOW-USAGE.md
src/coding_agent/: __init__.py  __main__.py  agent.py  agent_persona.py  cli.py  (+20 more)
tests/: conftest.py  pytest.ini  test_agent.py  test_build_tools.py  test_checkpoint.py  test_cli.py  test_config.py  test_conversation.py  test_file_advanced.py  test_file_basic.py  test_file_edit.py  test_file_patch.py  test_file_read.py  test_file_write.py  test_git.py  test_glob_grep.py  test_llm.py  test_output_formatter.py  test_performance.py  test_permissions.py  test_phase6.py  test_polish.py  test_quality.py  test_renderer.py  test_search.py  test_session.py  test_session_sub_agents.py  test_shell.py  test_sidebar_toolbar.py  test_skills.py  test_slash_commands.py  test_slash_commands_agent.py  test_spawn_sub_agent.py  test_split_layout_removed.py  test_stability.py  test_todo_enhancements.py  test_tool_guard.py  test_tool_result.py  test_tools_base.py  test_workspace_info.py
(+96 files in other folders)
